@@ -1,3 +1,8 @@
+4/11/2013
+---------------------------
+- KO fixed #501 ("Merge Duplicate Points" Dialog Doesn't Find Duplicate Points)
+- KO Changed the layer colors to match the colors used by Dan's build.
+
 4/4/2013
 ---------------------------
 - KO fixed #474 (Change zoom-on-scroll rate)
